Initial update pass and cleanup